docs/version-1.30/modules/en/pages/tutorials/writing-policies/wasi/01-intro-wasi.adoc
include::partial$variables.adoc[]
= WASI
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-10-10
:page-revdate: {revdate}
:description: Using WASI to develop {project-name} policies.
:doc-persona: ["kubewarden-policy-developer"]
:doc-topic: ["kubewarden", "writing-policies", "wasi"]
:doc-type: ["tutorial"]
:keywords: ["kubewarden", "kubernetes", "wasi"]
:sidebar_label: WASI
:current-version: {page-origin-branch}

The https://wasi.dev/[WebAssembly System Interface (WASI)] is a WebAssembly standard providing a set of interfaces allowing execution of WebAssembly outside of the browser.

[CAUTION]
====

Authors writing regular policies should never use plain WASI system interfaces to write policies.

This page is for {project-name} maintainers or low level policy authors who want to experiment with bleeding edge WASM platforms.
====


Using WASI, you can have a WebAssembly module that interacts with system primitives like STDOUT, STDERR, STDIN, environment variables and more.

Many of the compilers used to compile {short-project-name} policies produce WebAssembly modules that target WASI interfaces.
However, {short-project-name} policies use the https://github.com/wapc[waPC] project to implement bi-directional communication between the policy and the policy runtime (`kwctl` or `policy-server`).
{short-project-name} use of the communication protocol is described xref:reference/spec/01-intro-spec.adoc[here].

There are special cases when the waPC project can't be used yet.
In these circumstances you can write a policy using the interfaces provided by WASI.

[IMPORTANT]
====

{short-project-name} supports WASI policies from the {short-project-name} 1.7.0 release forward.
====


== Limitations

You shouldn't use WASI policies under regular circumstances because they have
inferior performance at evaluation time compared to waPC/Rego ones.

[NOTE]
====

Bidirectional communication between the policy and the host can be achieved,
but requires changes to be done inside of the language SDK. This is required to
use xref:/reference/spec/host-capabilities/01-intro-host-capabilities.adoc[host
capabilities] and to write
xref:/explanations/context-aware-policies.adoc[context-aware] policies.

Currently, only the {short-project-name} Go and JavaScript/TypeScript SDKs expose them to
WASI policies.

If this is of interest to you, please get in touch. We can then prioritize the
effort.

====


== Use cases

The only reason to write a "plain WASI" policy is when you can't use the waPC communication mechanism.

Currently, (as of June 2023), the only good reason to do this is when using the official Go compiler to produce a WebAssembly module.

Starting from the 1.21 release, the official Go compiler is able to produce WebAssembly modules targeting the WASI interface.
However, these modules can't yet export functions to the WebAssembly runtime.
This limitation, tracked by https://github.com/golang/go/issues/42372[this dedicated issue], prevents the adoption of the waPC protocol.

The {short-project-name} project team advise that you write {short-project-name} Go policies using the TinyGo compiler, as described xref:tutorials/writing-policies/go/01-intro-go.adoc[here].

However, certain complex Go code bases can't be compiled using the TinyGo compiler.
This includes, for example, code bases like https://github.com/google/cel-go[CEL-go] or https://github.com/kyverno/kyverno/[Kyverno].
In these circumstances, usage of the official Go compiler can help.

== Communication protocol

This section describes how to write a plain WASI policy.

You need to write the code as a regular CLI program.
The program must take the following sub-commands:

* `validate`: this command is invoked by the policy engine to evaluate an admission request
* `validate-settings`: this command is invoked by the policy engine to validate the policy settings

In both cases, the data to be validated is provided via STDIN.
The policy must provide the answer via STDOUT.
You can use STDERR for debug or error messages.

=== Validation

The validation of a request happens when invoking the policy CLI program using the `validate` sub-command.

STDIN must contain a JSON document describing a `ValidationRequest` object.
The policy must write to STDOUT a JSON document that containing a `ValidationResponse` object.

Both the `ValidationRequest` and `ValidationResponse` objects are described xref:reference/spec/03-validating-policies.adoc[here].

=== Mutation

Mutating policies work in the same way as validating ones.
The policy CLI program is invoked using the `validate` sub-command.

STDIN must contain a JSON document describing a `ValidationRequest` object.
The policy must write to STDOUT a JSON document containing a `ValidationResponse` object.

Both the `ValidationRequest` and `ValidationResponse` objects are described xref:reference/spec/03-validating-policies.adoc[here].

When a mutation is needed, the `ValidationResponse` object must have a key, `mutated_object`, containing the object to be created.
This process is described xref:reference/spec/04-mutating-policies.adoc[here].

== Context-aware

Only supported via the Go SDK for now. The Go SDK exposes the context-aware
capabilities as usual, for more information see xref:explanations/context-aware-policies.adoc[here].

As an example of a WASI Go context-aware policy, see the
https://github.com/kubewarden/go-wasi-context-aware-test-policy[go-wasi-context-aware-test-policy].

=== Settings validation

The policy must provide a sub-command named `validate-settings`.
This command is used to validate the settings provided by the user.

The program must receive on STDIN, a JSON object that holds the settings provided by the user.
It then validates them and writes a `SettingsValidationResponse` object to STDOUT.

The format of the `SettingsValidationResponse` and the settings validation process is described xref:reference/spec/02-settings.adoc[here].

== Policy metadata

Each {short-project-name} policy must be annotated via the `kwctl annotate` command.
The policy metadata of a plain WASI policy must have this value:

[subs="+attributes",yaml]
----
executionMode: wasi
----

== Template project

https://github.com/kubewarden/go-wasi-policy-template[This GitHub repository] contains a template of a Go-based policy using the WASI protocol.
